проработал круд над коминтариями

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block menu %}
     <li><a href="{% url 'article_add' %}">Add Article</a></li>
+    <li><a href="{% url 'comment_add' %}">Add Comment</a></li>
+    <li><a href="{% url 'comment_view' %}">Comments</a></li>
 {% endblock %}
 
 {% block content %}
