добавил htnlки исправил ошибки во вбюшки

--- a/source/webapp/templates/article.html
+++ b/source/webapp/templates/article.html
@@ -3,8 +3,8 @@
 {% block title %}{{ article.title }}{% endblock %}
 
 {% block menu %}
-    <li><a href="{% url "article_update" article.pk %}">Edit</a></li>
-    <li><a href="{% url "article_delete" article.pk %}">Delete</a></li>
+    <li><a href="{% url "article_update" article.pk %}" class="btn btn1">Edit</a></li>
+    <li><a href="{% url "article_delete" article.pk %}" class="btn btn2">Delete</a></li>
 {% endblock %}
 
 {% block content %}
