--- a/source/webapp/templates/comment/comments.html
+++ b/source/webapp/templates/comment/comments.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
 
 {% block menu %}
-    <li><a href="{% url 'article_add' %}">Add Article</a></li>
-    <li><a href="{% url 'comment_add' %}">Add Comment</a></li>
+    <li><a href="{% url 'article_add' %}" class="btn btn1">Add Article</a></li>
+    <li><a href="{% url 'comment_add' %}" class="btn btn3">Add Comment</a></li>
 {% endblock %}
 
 {% block content %}
-    <h1>Articles:</h1>
+    <h1>Comments:</h1>
     <hr/>
     {% for comment in comments %}
-        <h2>{{ article.title }}</h2>
         <p>Created by {{ comment.author }}, Article: ({{ comment.article }})
             Text: {{ comment.text }}</p>
         <p>
-            <a href="{% url 'article_update' comment.pk %}">Edit</a>
-            <a href="{% url "article_delete" comment.pk %}">Delete</a>
+            <a href="{% url 'update_comment' comment.pk %}" class="btn btn4">Edit</a>
+            <a href="{% url 'delete_comment' comment.pk %}" class="btn btn3">Delete</a>
+            <a href="{% url 'article_view' comment.article.pk %}" class="btn btn1">read Article</a>
         </p>
         <hr/>
     {% endfor %}
