--- a/source/webapp/templates/delete.html
+++ b/source/webapp/templates/delete.html
@@ -3,7 +3,7 @@
 {% block title %}Delete Article{% endblock %}
 
 {% block menu %}
-    <li><a href="{% url 'article_view' article.pk %}">View</a></li>
+    <li><a href="{% url 'article_view' article.pk %}" class="btn btn4">View</a></li>
 {% endblock %}
 
 {% block content %}
