--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -13,7 +13,7 @@
 <nav class="navbar">
    <div class="container">
        <ul class="menu">
-           <li><a href="{% url 'index' %}">Home</a></li>
+           <li><a href="{% url 'index' %}" class="btn btn3">Home</a></li>
            {% block menu %}{% endblock %}
        </ul>
    </div>
