--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,23 +1,24 @@
 {% extends 'base.html' %}
 
 {% block menu %}
-    <li><a href="{% url 'article_add' %}">Add Article</a></li>
-    <li><a href="{% url 'comment_add' %}">Add Comment</a></li>
-    <li><a href="{% url 'comment_view' %}">Comments</a></li>
+    <li><a href="{% url 'article_add' %}" class="btn btn4">Add Article</a></li>
+    <li><a href="{% url 'comment_add' %}" class="btn btn1">Add Comment</a></li>
+    <li><a href="{% url 'comment_view' %}" class="btn btn2">Comments</a></li>
 {% endblock %}
 
 {% block content %}
     <h1>Articles:</h1>
-    <hr/>
+    <div class="home_div">
+
     {% for article in articles %}
+        <div class="boss_div">
         <h2>{{ article.title }}</h2>
         <p>Created by {{ article.author }} ({{ article.category|default_if_none:'Без категории' }})
             at {{ article.created_at|date:'d.m.Y H:i:s' }}</p>
-        <p>
-            <a href="{% url 'article_view' article.pk %}">More...</a>
-            <a href="{% url 'article_update' article.pk %}">Edit</a>
-            <a href="{% url "article_delete" article.pk %}">Delete</a>
-        </p>
-        <hr/>
+            <a href="{% url 'article_view' article.pk %}" class="btn btn1">More...</a>
+            <a href="{% url 'article_update' article.pk %}" class="btn btn2">Edit</a>
+            <a href="{% url "article_delete" article.pk %}" class="btn btn3">Delete</a>
+        </div>
     {% endfor %}
+    </div>
 {% endblock %}
