--- a/source/webapp/templates/article.html
+++ b/source/webapp/templates/article.html
@@ -3,10 +3,10 @@
 {% block title %}{{ article.title }}{% endblock %}
 
 {% block menu %}
-    <li><a href="{% url "article_update" article.pk %}">Edit</a></li>
-    <li><a href="{% url "article_delete" article.pk %}">Delete</a></li>
+    <li><a href="{% url "article_update" article.pk %}" class="btn btn1">Edit</a></li>
+    <li><a href="{% url "article_delete" article.pk %}" class="btn btn4">Delete</a></li>
     {% if article.is_active %}
-        <li><a href="#add_comment">Add Comment</a></li>
+        <li><a href="#add_comment" class="btn btn2">Add Comment</a></li>
     {% endif %}
 {% endblock %}
 
@@ -15,6 +15,10 @@
     <p>Created by {{ article.author }} ({{ article.category|default_if_none:'Без категории' }})
         at {{ article.created_at|date:'d.m.Y H:i:s' }}</p>
     <div class="pre">{{ article.text }}</div>
+    <p>Tags</p>
+    {% for tag in article.tags.all %}
+        <a href="{% url 'index' %}" class="btn btn4">{{ tag }}</a>
+    {% endfor %}
     <hr/>
     <h3>Comments:</h3>
     {% if is_paginated %}
