--- a/source/webapp/templates/comment/comments.html
+++ b/source/webapp/templates/comment/comments.html
@@ -18,4 +18,7 @@
         </p>
         <hr/>
     {% endfor %}
+        {% if is_paginated %}
+        {% include 'partial/pagination.html' %}
+    {% endif %}
 {% endblock %}
