--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+        {% include 'partial/simple_search.html' %}
     <h1>Articles:</h1>
     <div class="home_div">
 
