сделал поиск по автору в коментариях и по статьям

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -4,6 +4,7 @@
     <li><a href="{% url 'article_add' %}" class="btn btn4">Add Article</a></li>
     <li><a href="{% url 'comment_add' %}" class="btn btn1">Add Comment</a></li>
     <li><a href="{% url 'comment_view' %}" class="btn btn2">Comments</a></li>
+    <li><a href="{% url 'article_search' %}" class="btn btn2">Search</a></li>
 {% endblock %}
 
 {% block content %}
